arch-perl-0.4.1 (19-Jan-2005)

* Improved Arch::Storage documentation.
* Added "make debian" to bring debian/ subdirectory for those who need it.
* Fixed some regexps in Arch::Name.
* Fixed the file/dir history cut when a parent directory was renamed.
* Several other fixes for changes and history.
* Enhanced clear_cache method in Arch::Session and Arch::Tree.

arch-perl-0.4.0 (31-Dec-2004)

* Enhanced and documented Arch::TempFiles, tests added.
* Highly enhanced Arch::Tree.
* Updated Arch::Session, support for missing revisions.
* New classes Arch::Inventory, Arch::Changes, Arch::LiteWeb, Arch::Registry.
* New class Arch::Name to parse, store and construct an arch name.
* New class Arch::RevisionBunches to group revisions in bunches.
* Supported $DEBUG values from 0 to 7 (suggested values are 1, 3 and 7).

arch-perl-0.3.1 (27-Aug-2004)

* Enhanced and documentated Arch::Log.
* Added tests for Arch::Log.
* New class Arch::Tree with documentation and tests.

arch-perl-0.3.0 (29-Jul-2004)

* Added documentation of Arch::Util and Arch::Changeset.
* Several small fixes and enhancements.

arch-perl-0.2.9 (10-Jul-2004)

* Initially separated from archzoom project.
* Classes: Arch::Changeset, Arch::Library, Arch::Log, Arch::RunLimit,
  Arch::Session, Arch::SharedCache, Arch::SharedIndex, Arch::Storage,
  Arch::Tarball, Arch::TempFiles, Arch::Util