@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Arch
-version:      0.4.1
+version:      0.4.2
 version_from: perllib/Arch.pm
 installdirs:  site
 requires:
